syntax = "proto3";

package com.road.yishi.proto.battle;

message PrepareOverMsg {
  int32 frame = 1;
  repeated int32 prepareOverLivings = 2;
}
