syntax = "proto3";

package com.road.yishi.proto.battle;

message SoldierMsg {
  int32 livingId = 1;
  int32 tempId = 2;
  int32 type = 3;
  int32 side = 4;
  int32 pos = 5;
  int32 initHp = 6;
  int32 hp = 7;
  int32 qteTime = 8;
  int32 castTime = 9;
  int32 armyPawnId = 10;
  int32 grade = 11;
  int32 phyAttack = 12;
  int32 phyDefence = 13;
  int32 magAttack = 14;
  int32 magDefence = 15;
  int32 forceHit = 16;
  int32 parry = 17;
  int32 sites = 18;
  repeated int32 skillId = 19;
  int32 attackWound = 20;
  int32 hitWound = 21;
  int32 maxHp = 22;
}
